		Inspired by Luchezar Georgiev's patch for subu_cio, a closer
		look at the subu borrow bit resulted in a bug fix which finally
		allows a OpenBSD/luna88k 6.8 ramdisk to boot all the way to
		userland.
20210127	Writing some ugly glue code to connect the Lance Ethernet
		device (dev_le) to the LUNA88K machine. An OpenBSD/luna88k 6.8
		ramdisk can now (barely) reach the internet using TCP/IPv4.
20210130	Writing guest OS install instructions for running OpenBSD/
		luna88k with root-on-nfs, which involves using NetBSD/pmax as
		an NFS server and OpenBSD/sgi (!) to run MAKEDEV.
20210207	Fixing a spelling mistake in the 88K fdiv.sss instruction,
		making self-compilation of [an older version of] GXemul inside
		OpenBSD/luna88k get further.
20210209	Adding keyboard support to dev_luna88k.
20210213	Implementing exception cases in 88K xmem_slow implementation.
20210214	Implementing the fdiv.dss 88K instruction.
20210215	Implementing the fsub.sss 88K instruction.

==============  RELEASE 0.6.3  ==============

20210215	Implementing the fadd.dss 88K instruction, and working a bit
		more on the exception cases in the xmem instruction.
20210220	Implementing mouse emulation support for the LUNA88K machine.
		Updating OpenBSD/sgi install instructions (6.5 -> 6.8),
		and including a screenshot of X11 running.
20210221	Handle return values from interrupted select() when checking
		for available console input. (Found when using CTRL-C on Linux
		to enter the debugger command line, and noticed that it was
		spuriously broken.)
20210222	Basic multiprocessor bootup of OpenBSD/luna88k now works, but
		it is slightly unstable.

==============  RELEASE 0.6.3.1  ==============

20210228	Switching back from C++ to plain C.
		Implementing a helper method for registering device addresses
		as symbols (so that it can be used from several machines).
20210307	Subtle colorized output when stdin/stdout are connected to a
		tty, to make it quicker to interpret text output.