@@ -33,6 +33,11 @@ guest operating systems</a> that can be regarded as working in GXemul.
 <p><br>The most important changes between release 0.6.3.1 and 0.7.0 are:
 <ul>
 	<li>...
+	
+	<p>
+	<li>Output from the emulator is now subtly colorized, to make it
+		easier to quickly interpret the text. (This can be disabled
+		using <tt>-A</tt>.)
 </ul>
 
 <p>The source code is also switched back from C++ to plain C:
