@@ -24,7 +24,6 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 <b>Current "short-list":</b>
 
 o) verbosity settings for debug messages for individual subsystems:
-	command line option for turning off color!
 	debugmsg_init() -- registers subsystems.
 		SUBSYS_STARTUP = ""
 		SUBSYS_NET = "net"
