@@ -29,7 +29,7 @@
 .\"
 .\"     groff -man -Tascii gxemul.1    or    nroff -man gxemul.1
 .\"
-.Dd FEBRUARY 2021
+.Dd MARCH 2021
 .Dt GXEMUL 1
 .Os
 .Sh NAME
@@ -369,6 +369,8 @@ as an X11 display to use for framebuffers.
 .Pp
 General options:
 .Bl -tag -width Ds
+.It Fl A
+Disable colorized output.
 .It Fl c Ar cmd
 Add
 .Ar cmd
